Simplify build.sbt and run configurations